force-app/main/default/objects/Flow_Config__mdt/Flow_Config__mdt.object-meta.xml
<CustomObject>
    <label>Flow Config</label>
    <pluralLabel>Flow Configs</pluralLabel>
</CustomObject>