force-app/main/default/objects/Flow_Config__mdt/fields/Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Error_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Error Log</label>
    <type>Checkbox</type>
</CustomField>