force-app/main/default/objects/Flow_Config__mdt/fields/Notify_Member__c.field-meta.xml
<CustomField>
    <fullName>Notify_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Member</label>
    <type>Checkbox</type>
</CustomField>