force-app/main/default/objects/Flow_Config__mdt/fields/Success_Log__c.field-meta.xml
<CustomField>
    <fullName>Success_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Success Log</label>
    <type>Checkbox</type>
</CustomField>